# flaskvue

./: app.py  pyproject.toml  script.py
flaskvue/: __init__.py  config.py  dev.db  extensions.py
flaskvue/todo/: __init__.py  models.py  schemas.py
flaskvue/user/: __init__.py  models.py  routes.py  schemas.py  validations.py
tests/: test_flaskvue.py
