[tool.poetry]
name = "flaskvue"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = {version = "^2.0.2", python = "3.7.9"}
Flask-SQLAlchemy = {version = "^2.5.1", python = "3.7.9"}
flask-smorest = {version = "^0.35.0", python = "3.7.9"}
python-dotenv = {version = "^0.19.2", python = "3.7.9"}
Flask-JWT-Extended = {version = "^4.3.1", python = "3.7.9"}
Flask-Bcrypt = {version = "^0.7.1", python = "3.7.9"}
marshmallow = {version = "^3.14.1", python = "3.7.9"}
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
